Update and rename backupflash.yml to BackUpFlash.yml

--- a/.github/workflows/BackUpFlash.yml
+++ b/.github/workflows/BackUpFlash.yml
@@ -1,4 +1,4 @@
-name: backupflash
+name: BackUpFlash
 
 on:
   push:
@@ -17,7 +17,7 @@ jobs:
         sudo apt-get install git
         sudo apt-get install build-essential
         sudo apt-get install gettext
-    - name: compile backupflash python
+    - name: compile BackUpFlash python
       run: |
         python -m compileall .
         find . -type f -name "*.po" -exec msgfmt {} -o {}.mo \;
